--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
     "swagger-autogen": "node swagger.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^5.3.0",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "swagger-ui-express": "^4.6.2",
     "validatorjs": "^3.22.1"
   },
