--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.3.0",
+    "mongoose": "^7.1.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "swagger-ui-express": "^4.6.2",
